# commit_canvas

./: .gitignore  Cargo.toml  shell.nix
.github/workflows/: cd.yml  ci.yml
commitcanvas/: Cargo.toml
commitcanvas/src/: globals.rs  lib.rs  settings.rs  utils.rs
commitcanvas/src/callback/: buttons.rs  keys.rs  mod.rs  mouse.rs  resize.rs  touch.rs
commitcanvas/src/control/: marker.rs  menu.rs  mod.rs  selection.rs
commitcanvas/src/control/callback/: keyboard.rs  mod.rs  mouse.rs
commitcanvas/src/control/menu/: main.rs  mod.rs
commitcanvas/src/draw/: arrow.rs  line.rs  mod.rs  point.rs  rect.rs  select.rs  shape.rs
commitcanvas/src/draw/arrow/: mod.rs  select.rs
commitcanvas/src/draw/rect/: mod.rs
commitcanvas/src/model/: events.rs  guid.rs  mod.rs
commitcanvas/src/model/shape/: arrow.rs  mod.rs  options.rs  rect.rs  text.rs
commitcanvas/src/state/: editor.rs  guid.rs  marker.rs  mod.rs
commitcanvas/src/types/: geometry.rs  mod.rs
commitcanvas/src/view/: event.rs  mod.rs
commitcanvas/src/view/ui/: arrow.rs  mod.rs  rect.rs
commitcanvas/src/view/url/: mod.rs
commitcanvas/tests/: test_selections.rs  test_text.rs
commitcanvas/www/: package-lock.json  package.json  tailwind.config.js
infrastructure_browser/: Cargo.toml
infrastructure_browser/src/: globals.rs  lib.rs  utils.rs
infrastructure_browser/src/control/: marker.rs  mod.rs  selection.rs
infrastructure_browser/src/control/menu/: main.rs  mod.rs
infrastructure_browser/src/control/setup/: keyboard.rs  mod.rs  mouse.rs  window.rs
infrastructure_browser/src/view/: mod.rs
infrastructure_browser/src/view/ui/: arrow.rs  mod.rs  rect.rs  text.rs  utils.rs
infrastructure_browser/src/view/url/: mod.rs
rough/: Cargo.toml
rough/src/: geometry.rs  lib.rs
www/: index.html  index.js  package-lock.json  package.json  tailwind.config.js
www/css/: input.css
www/html/: background_pattern.html  marker.html  pencil_filter.html  pencil_filter_1.html  pencil_filter_2.html  pencil_filter_3.html  pencil_filter_4.html
