[workspace]
resolver = "2"
members = [
    "commitcanvas",
    "rough",
]

[workspace.package]
version = "0.1.0"
authors = ["Robin Raymond <robin@robinraymond.de>"]
description = "A tool to create commit graphs from git repositories"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
