[package]
name = "commitcanvas"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.7", optional = true }
rough = { path = "../rough" }

[dependencies.web-sys]
version = "0.3"
features = [
  'CssStyleDeclaration',
  'Document',
  'DomRect',
  'DomTokenList',
  'Element',
  'HtmlButtonElement',
  'HtmlCollection',
  'HtmlElement',
  'HtmlTextAreaElement',
  'KeyboardEvent',
  'MouseEvent',
  'Node',
  'SvgElement',
  'SvgForeignObjectElement',
  'Touch',
  'TouchEvent',
  'TouchList',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
