[package]
name = "commitcanvas"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
rough = { path = "../rough" }
erased-serde = "0.4"
serde.workspace = true
serde_yaml.workspace = true
log = "0.4"

[features]
test-utils = []
